--- a/assignment-06/index.html
+++ b/assignment-06/index.html
@@ -35,7 +35,7 @@
         <h3>Contact Information</h3>
         <ul>
             <li>Raegan Osentowski</li>
-            <li> href="mailto:raegan@osentowski.net">Email</a></li>
+            <li> email:raegan@osentowski.net</a></li>
         </ul>    
 
         
