--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -15,7 +15,7 @@
     <!-- style elements for body and table-->
     <style>
         body {
-            background-color: lightgrey;
+            background-color: lightgreen;
             font-family: 'Times New Roman', Times, serif;
             font-size: 14px;
         }
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <img src="beanscoffeeshop.jpeg" width="700" height="200" alt="Beans Coffee" title="Beans Coffee">
+    <img src="beanscoffeeshop.png" width="700" height="200" alt="Beans Coffee" title="Beans Coffee">
     <h1> Contact</h1>
     <a href="mailto:raegan@osentowski.net">Email!</a>
     <address>
