--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -80,13 +80,13 @@
     <form method="post" action="index.html">
         Name:<br />
         <input type="text" id="name" placeholder="Place name here" autofocus>
-        <h2>Hours you visit most frequently</h2>
-        <input type="checkbox" name="Hours you visit most frequently" type="Hours you visit most frequently" value="Monday">Monday<br />
-        <input type="checkbox" name="Hours you visit most frequently" type="Hours you visit most frequently" value="Tuesday">Tuesday<br />
-        <input type="checkbox" name="Hours you visit most frequently" type="Hours you visit most frequently" value="Wednesday">Wednesday<br />
-        <input type="checkbox" name="Hours you visit most frequently" type="Hours you visit most frequently" value="Thursday">Thursday<br />
-        <input type="checkbox" name="Hours you visit most frequently" type="Hours you visit most frequently" value="Friday">Friday<br />
-        <input type="checkbox" name="Hours you visit most frequently" type="Hours you visit most frequently" value="Saturday">Saturday<br />
+        <h2>Days you visit most frequently</h2>
+        <input type="checkbox" name="Days you visit most frequently" type="Days you visit most frequently" value="Monday">Monday<br />
+        <input type="checkbox" name="Days you visit most frequently" type="Days you visit most frequently" value="Tuesday">Tuesday<br />
+        <input type="checkbox" name="Days you visit most frequently" type="Days you visit most frequently" value="Wednesday">Wednesday<br />
+        <input type="checkbox" name="Days you visit most frequently" type="Days you visit most frequently" value="Thursday">Thursday<br />
+        <input type="checkbox" name="Days you visit most frequently" type="Days you visit most frequently" value="Friday">Friday<br />
+        <input type="checkbox" name="Days you visit most frequently" type="Days you visit most frequently" value="Saturday">Saturday<br />
         <pr></pr>
         comments<br />
         <textarea name="Questions?" id="Questions?" rows="5" col="30">Questions or Comments</textarea>
