--- a/Assignment-08/index.html
+++ b/Assignment-08/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             background-color: rgb(135, 199, 220);
-            text-align: Left;
+            text-align: Center;
             font-family: 'Times New Roman', Times, serif;
         }
 
@@ -47,83 +47,23 @@
     <div id="video" class="container">
         <h1>Music Video</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/JKrDdsgXuso?si=Q5pb3TAOlKO2JPR8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <!-- this division uses the lyric class-->
+    <!-- lyrics to song-->
     <div id="lyrics" class="lyrics">
-        <h1>Lyrics</h1>
-        <p>Come the war<br />
-        Come the avarice<br />
-        Come the war<br />
-        Come hell
+        <h1>Words to Stick Season by Noah Kahan Chorus</h1>
+        <p>And I love Vermont, but it's the season of the sticks and I</p><br />
+        Saw your mom she forgot that I existed and<br />
+        It's half my fault, but I just like to play the victim<br />
+        <p><span class="white-circle">white circle</span> I'll drink alcohol 'til my friends com home for Chistmas<br />
+        And I'll dream each night of some version of you<br />
+       That I might not have, but I did not lose<br />
+        Now you're tire tracks and one pair of shoes
         </p>
-        <p>Come attrition<br />
-        Come the reek of bones<br />
-        Come attrition<br />
-        Come hell
-        </p>
-        <p>This is why<br />
-        Why we fight<br />
-        Why we lie awake<br />
-        And this is why<br />
-        This is why we fight
-        </p>
-        <p>When we die<br />
-        We will die<br />
-        With our arms unbound
-        </p>
-        <p>And this is why<br />
-        This is why<br />
-        Why we fight
-        </p>
-        <p>Come hell<br />
-        Bride of quiet<br />
-        Bride of all unquiet things<br />
-        Bride of quiet<br />
-        Bride of hell
-        </p>
-        <p>Come the archers<br />
-        Come the infantry<br />
-        Come the archers<br />
-        Of hell
-        </p>
-        <p>This is why<br />
-        Why we fight<br />
-        Why we lie awake<br />
-        This is why<br />
-        This is why we fight<br />
-        And when we die<br />
-        We will die<br />
-        With our arms unbound<br />
-        And this is why<br />
-        This is why we fight<br />
-        Come hell<br />
-        Come hell
-        </p>
-        <p>This is why<br />
-        Why we fight<br />
-        Why we lie awake<br />
-        This is why<br />
-        This is why we fight<br />
-        When we die<br />
-        We will die with our arms unbound<br />
-        And this is why<br />
-        This is why we fight
-        </p>
-        <p>So come to me<br />
-        Come to me now<br />
-        Lay your arms around me<br />
-        And this is why<br />
-        This is why<br />
-        We fight
-        </p>
-        <p>Come hell<br />
-        Come hell<br />
-        Come hell<br />
-        Come hell
-        </p>
+        <p>And I'm split in half, but that'll have to do, ohh, ohh<br />
+            </p>
     </div>
-    <div id="copyright" class="container">
-        <h1>copyright &copy;</h1>
-        <p>This is copyright from Noah Kahan</p>
+    <div id="Trademark" class="container">
+        <h1>Trademark &trade;</h1>
+        <p>This is trademarked from Noah Kahan</p>
     </div>
 </body>
 </html>
