--- a/Assignment-08/index.html
+++ b/Assignment-08/index.html
@@ -50,10 +50,10 @@
     <!-- lyrics to song-->
     <div id="lyrics" class="lyrics">
         <h1>Words to Stick Season by Noah Kahan Chorus</h1>
-        <p>And I love Vermont, but it's the season of the sticks and I</p>
-        Saw your mom she forgot that I existed and
+        <p>And I love Vermont, but it's the season of the sticks and I
+        Saw your mom she forgot that I existed and</p>
         It's half my fault, but I just like to play the victim<br />
-        <p> <span class="white-circle">white circle</span> I'll drink alcohol 'til my friends com home for Chistmas<br />
+        <p> <span class="white-circle"></span> I'll drink alcohol 'til my friends com home for Chistmas<br />
         And I'll dream each night of some version of you<br />
        That I might not have, but I did not lose<br />
         Now you're tire tracks and one pair of shoes</p>
