--- a/Assignment-08/index.html
+++ b/Assignment-08/index.html
@@ -50,15 +50,14 @@
     <!-- lyrics to song-->
     <div id="lyrics" class="lyrics">
         <h1>Words to Stick Season by Noah Kahan Chorus</h1>
-        <p>And I love Vermont, but it's the season of the sticks and I
-        Saw your mom she forgot that I existed and</p>
-        It's half my fault, but I just like to play the victim<br />
-        <p> <span class="white-circle"></span> I'll drink alcohol 'til my friends com home for Chistmas<br />
-        And I'll dream each night of some version of you<br />
-       That I might not have, but I did not lose<br />
-        Now you're tire tracks and one pair of shoes</p>
-        <p>And I'm split in half, but that'll have to do, ohh, ohh<br />
-            </p>
+        <p>And I love Vermont, but it's the season of the sticks and I</p>
+        <p>Saw your mom she forgot that I existed and</p>
+        <br>It's half my fault, but I just like to play the victim<br />
+        <p> <span class="white-circle"></span> I'll drink alcohol 'til my friends com home for Chistmas</p>
+       <br> And I'll dream each night of some version of you<br />
+       <p>That I might not have, but I did not lose</p>
+        <p>Now you're tire tracks and one pair of shoes</p>
+        <p>And I'm split in half, but that'll have to do, ohh, ohh</p><br />
     </div>
     <div id="Trademark" class="container">
         <h1>Trademark &trade;</h1>
