--- a/Assignment-08/index.html
+++ b/Assignment-08/index.html
@@ -39,14 +39,14 @@
     <div id="audio" class="container">
         <h1>Audio</h1>
         <audio preload controls>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0mflMxspEfB0VbI1kyLiAv?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1297701826&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/noahkahan" title="Noah Kahan" target="_blank" style="color: #cccccc; text-decoration: none;">Noah Kahan</a> · <a href="https://soundcloud.com/noahkahan/stick-season" title="Stick Season" target="_blank" style="color: #cccccc; text-decoration: none;">Stick Season</a></div>
             <p> This is the audio of Stick Season, the song</p>
         </audio>
     </div>
     <!-- Here is the stick season music video-->
     <div id="video" class="container">
         <h1>Music Video</h1>
-        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1297701826&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/noahkahan" title="Noah Kahan" target="_blank" style="color: #cccccc; text-decoration: none;">Noah Kahan</a> · <a href="https://soundcloud.com/noahkahan/stick-season" title="Stick Season" target="_blank" style="color: #cccccc; text-decoration: none;">Stick Season</a></div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/JKrDdsgXuso?si=KoNHOJAcIR5TNVoc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <!-- lyrics to song-->
     <div id="lyrics" class="lyrics">
         <h1>Words to Stick Season by Noah Kahan Chorus</h1>
