--- a/Assignment-09/index.html
+++ b/Assignment-09/index.html
@@ -19,37 +19,36 @@
 
 <body>
     <h1>Top 3 Hikes of the SRA Club</h1>
-    <h2>List</h2>
+    <h2>In no particular order</h2>
     <div>
         <h2>Hike 1: Blodgett Canyon</h2>
+        <img src="./images/Blodgett_Canyon.jpeg" alt = "Blodgett Canyon" width="300" height="200"> 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53760.066179521506!2d-114.35097483288092!3d46.27616005431999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535ec782908c9825%3A0x236c8fd933cbc40e!2sBlodgett%20Canyon!5e0!3m2!1sen!2sus!4v1698108730096!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
              <ul>
                 <li>9 miles total </li>
                 <li>980 ft Elevation Gain</li>
                 <li>Takes average of 3.5 hours to complete</li>
           </ul>
-          <img src="./images/Blodgett_Canyon.jpeg" alt = "Blodgett Canyon" width="300" height="200"> 
     </div>
     <div>
         <h2>Hike 2: Blue Mountain</h2>
+        <img src="./images/Blue_Mountain.jpeg" alt = "Blue Mountain Loop" width="300" height="200"> 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2729.8449506412903!2d-114.09007792356715!3d46.82705424148315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dd3b35b546aff%3A0x74ef5fc0b6411a00!2sBlue%20Mountain%20Trailhead%20(hike%20%26%20bike)!5e0!3m2!1sen!2sus!4v1698109099640!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <li>5.5 miles total </li>
                 <li>1,062 ft Elevation Gain</li>
                 <li>Takes on average 2 hours, 40 minutes to complete </li>
           </ul>
-          <img src="./images/Blue_Mountain.jpeg" alt = "Blue Mountain Loop" width="300" height="200"> 
     </div>
     <div>
         <h2>Hike 3: Lolo Peak</h2>
+        <img src="./images/Lolo_peak.jpeg" alt = "Lolo Peak" width="300" height="200"> 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43801.16352936433!2d-114.28575515890496!3d46.674696349358726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535e8138aa1aa1c1%3A0x922d5faba9df700a!2sLolo%20Peak!5e0!3m2!1sen!2sus!4v1698109461993!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <li>11.4 miles total </li>
                 <li>4,163 ft Elevation Gain</li>
                 <li>Takes all-day, budget for at least 8 hours </li>
           </ul>
-          <img src="./images/Lolo_peak.jpeg" alt = "Lolo Peak" width="300" height="200"> 
-    </div> 
     <h2>Additional Hikes in Montana</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/QyZWUTAIDYU?si=hrI7OruQi3yLIzT4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <a href="#">back to top</a>
+    <a href="#">To Top!</a>
 </body>
 </html>
