--- a/Assignment-09/index.html
+++ b/Assignment-09/index.html
@@ -22,7 +22,7 @@
     <h2>In no particular order</h2>
     <div>
         <h2>Hike 1: Blodgett Canyon</h2>
-        <img src="./images/Blodgett_Canyon.jpeg" alt = "Blodgett Canyon" width="300" height="200"> 
+        <img src="./images/Blodgett_Canyon.jpeg" alt = "Blodgett Canyon" width="400" height="450"> 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53760.066179521506!2d-114.35097483288092!3d46.27616005431999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535ec782908c9825%3A0x236c8fd933cbc40e!2sBlodgett%20Canyon!5e0!3m2!1sen!2sus!4v1698108730096!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
              <ul>
                 <li>9 miles total </li>
@@ -32,7 +32,7 @@
     </div>
     <div>
         <h2>Hike 2: Blue Mountain</h2>
-        <img src="./images/Blue_Mountain.jpeg" alt = "Blue Mountain Loop" width="300" height="200"> 
+        <img src="./images/Blue_Mountain.jpeg" alt = "Blue Mountain Loop" width="400" height="450"> 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2729.8449506412903!2d-114.09007792356715!3d46.82705424148315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dd3b35b546aff%3A0x74ef5fc0b6411a00!2sBlue%20Mountain%20Trailhead%20(hike%20%26%20bike)!5e0!3m2!1sen!2sus!4v1698109099640!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <li>5.5 miles total </li>
                 <li>1,062 ft Elevation Gain</li>
@@ -41,7 +41,7 @@
     </div>
     <div>
         <h2>Hike 3: Lolo Peak</h2>
-        <img src="./images/Lolo_peak.jpeg" alt = "Lolo Peak" width="300" height="200"> 
+        <img src="./images/Lolo_peak.jpeg" alt = "Lolo Peak" width="400" height="450"> 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43801.16352936433!2d-114.28575515890496!3d46.674696349358726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535e8138aa1aa1c1%3A0x922d5faba9df700a!2sLolo%20Peak!5e0!3m2!1sen!2sus!4v1698109461993!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <li>11.4 miles total </li>
                 <li>4,163 ft Elevation Gain</li>
@@ -49,6 +49,11 @@
           </ul>
     <h2>Additional Hikes in Montana</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/QyZWUTAIDYU?si=hrI7OruQi3yLIzT4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <p>Sign up for these hikes through the link!</p>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScLWhGEzTHws0rDv5cA7jW41Z6dQJBDdTdll49ahEsvkPAimg/viewform?embedded=true" width="640" height="967" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+         <nav>
+          <a href="./pages/contact.html">contact</a>
+        </nav>
     <a href="#">To Top!</a>
 </body>
 </html>
