--- a/Assignment-09/index.html
+++ b/Assignment-09/index.html
@@ -47,13 +47,16 @@
                 <li>4,163 ft Elevation Gain</li>
                 <li>Takes all-day, budget for at least 8 hours </li>
           </ul>
-    <h2>Additional Hikes in Montana</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/QyZWUTAIDYU?si=hrI7OruQi3yLIzT4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          <p>Sign up for these hikes through the link!</p>
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScLWhGEzTHws0rDv5cA7jW41Z6dQJBDdTdll49ahEsvkPAimg/viewform?embedded=true" width="640" height="967" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-         <nav>
+    </div>
+    <div>
+        <h2>Additional Hikes in Montana</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/QyZWUTAIDYU?si=hrI7OruQi3yLIzT4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+             <p>Sign up for this weeks hike through the form below!</p>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScLWhGEzTHws0rDv5cA7jW41Z6dQJBDdTdll49ahEsvkPAimg/viewform?embedded=true" width="640" height="967" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <nav>
           <a href="./pages/contact.html">contact</a>
         </nav>
-    <a href="#">To Top!</a>
+            <a href="#">To Top!</a>
+    </div>
 </body>
 </html>
