--- a/Assignment-10/index.html
+++ b/Assignment-10/index.html
@@ -5,31 +5,37 @@
     <meta name="description" content="CSS styles">
     <meta name="author" content="Assignment10">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fun with Styles</title>
+    <title>Rock info using code</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
 </head>
 <body>
 <div class="main-container">
-    <h1 id="mainheader">Cool Rocks!</h1>    
+    <h1> id="mainheader">Cool Rocks!</h1>    
     <div class="secondary-container align">
-         <img id="life" src="images/chert.jpeg" height="362px" alt="Life is Strange" title="Life is Strange" />
     </div>
+
     <div class="secondary-container">
-        <h2>Chert</h2> is a multiplatform game developed by DONTNOD Entertainment and published by Square Enix. Life Is Strange follows the exploits of 18-year old Max Caulfield, a high school senior who learns she has the power to rewind time when she saves her childhood friend, Chloe Price, from being killed. Life Is Strange was released on the XBox One on January 29, 2015[2] and the PC via Steam and other online retail sites for PC Gaming on Janurary 30, 2015.[3] Its release on the PlayStation 3 and PlayStation 4 via the PlayStation Network was delayed until February 3, 2015 on account of technical problems.[4][1][5]
-    </div>  
+        <h2>Chert</h2> 
+        <p>Chert is a fine-grained, sedimentary rock. This is a rock made up of silicon dioxide (SiO2) through a combining of minerals. There are common in the US plains where flat layers allow for deformation by wind and erosion.</p> 
+         <img id="chert" src="images/chert.jpeg" height="362px" alt="Chert" title="chert" />
+    </div> 
 
     <div class="secondary-container align">
-        <img id="breath" src="images/Pyrite.jpeg" width="350px" alt="Breath of the Wild" title="Breath of the Wild" />
    </div>
+
    <div class="secondary-container">
-        <h2>Phyrite</h2> is a 2017 action-adventure game developed and published by Nintendo for the Nintendo Switch and Wii U consoles. Breath of the Wild is part of the Legend of Zelda franchise and is set at the end of the Zelda timeline; the player controls Link, who awakens from a hundred-year slumber to defeat Calamity Ganon and save the kingdom of Hyrule.
+        <h2>Pyrite</h2> 
+        <p>Pyrite is a natrally occuring mineral that is commonly refered to as "fool's gold". This is technically not a rock but is commonly categorized as one as it can contain various mineral intrusions. The mineral is semi-conductive and contains a low hardness.</p>
+        <img id="pyrite" src="images/Pyrite.jpeg" width="350px" alt="Pyrite" title="Pyrite" />
    </div>  
 
    <div class="secondary-container align">
-        <img id="breath" src="images/obsidian.jpeg" width="350px" alt="Breath of the Wild" title="Breath of the Wild" />
     </div>
+
     <div class="secondary-container">
-        <h2>Obsidian</h2> is a 2017 action-adventure game developed and published by Nintendo for the Nintendo Switch and Wii U consoles. Breath of the Wild is part of the Legend of Zelda franchise and is set at the end of the Zelda timeline; the player controls Link, who awakens from a hundred-year slumber to defeat Calamity Ganon and save the kingdom of Hyrule.
+        <h2>Obsidian</h2> 
+        <p>Obsidian is a volcanic rock (igneous) made from lava extrusion. This means the lava spilled onto the earth's surface heating up the metamorphic or sedimentary rocks in the area. This intense heat causes the layered look. This is then rapidly cooled causing the low mineral composition.</p>
+        <img id="obsidian" src="images/obsidian.jpeg" width="350px" alt="obsidian" title="obsidian" />
     </div>  
 
 </div>
