Edit round2 on 10

--- a/Assignment-10/index.html
+++ b/Assignment-10/index.html
@@ -10,13 +10,12 @@
 </head>
 <body>
 <div class="main-container">
-    <h1> id="mainheader">Cool Rocks!</h1>    
+    <h1>  id="mainheader">Cool Rocks</h1>      
     <div class="secondary-container align">
     </div>
 
     <div class="secondary-container">
-        <h2>Chert</h2> 
-        <p>Chert is a fine-grained, sedimentary rock. This is a rock made up of silicon dioxide (SiO2) through a combining of minerals. There are common in the US plains where flat layers allow for deformation by wind and erosion.</p> 
+        <h2>Chert</h2> Chert is a fine-grained, sedimentary rock. This is a rock made up of silicon dioxide (SiO2) through a combining of minerals. There are common in the US plains where flat layers allow for deformation by wind and erosion.
          <img id="chert" src="images/chert.jpeg" height="362px" alt="Chert" title="chert" />
     </div> 
 
@@ -24,8 +23,7 @@
    </div>
 
    <div class="secondary-container">
-        <h2>Pyrite</h2> 
-        <p>Pyrite is a natrally occuring mineral that is commonly refered to as "fool's gold". This is technically not a rock but is commonly categorized as one as it can contain various mineral intrusions. The mineral is semi-conductive and contains a low hardness.</p>
+        <h2>Pyrite</h2> Pyrite is a natrally occuring mineral that is commonly refered to as "fool's gold". This is technically not a rock but is commonly categorized as one as it can contain various mineral intrusions. The mineral is semi-conductive and contains a low hardness.
         <img id="pyrite" src="images/Pyrite.jpeg" width="350px" alt="Pyrite" title="Pyrite" />
    </div>  
 
@@ -33,8 +31,7 @@
     </div>
 
     <div class="secondary-container">
-        <h2>Obsidian</h2> 
-        <p>Obsidian is a volcanic rock (igneous) made from lava extrusion. This means the lava spilled onto the earth's surface heating up the metamorphic or sedimentary rocks in the area. This intense heat causes the layered look. This is then rapidly cooled causing the low mineral composition.</p>
+        <h2>Obsidian</h2> Obsidian is a volcanic rock (igneous) made from lava extrusion. This means the lava spilled onto the earth's surface heating up the metamorphic or sedimentary rocks in the area. This intense heat causes the layered look. This is then rapidly cooled causing the low mineral composition.
         <img id="obsidian" src="images/obsidian.jpeg" width="350px" alt="obsidian" title="obsidian" />
     </div>  
 
