--- a/Assignment-10/index.html
+++ b/Assignment-10/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div class="main-container">
-    <h1>Cool Rocks</h1>  
-        
+    <h1>Cool Rocks!</h1>  
+
     <div class="secondary-container align">
     </div>
     <div class="secondary-container">
