--- a/Assignment-10/index.html
+++ b/Assignment-10/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 <div class="main-container">
-    <h1>Cool Rocks!</h1>  
-
+    <h1 id="mainheader">Cool Rocks!</h1>  
     <div class="secondary-container align">
     </div>
     <div class="secondary-container">
@@ -21,7 +20,7 @@
     </div> 
 
     <div class="secondary-container align">
-   </div>
+    </div>
    <div class="secondary-container">
         <h2>Pyrite</h2> 
         <p>Pyrite is a natrally occuring mineral that is commonly refered to as "fool's gold". This is technically not a rock but is commonly categorized as one as it can contain various mineral intrusions. The mineral is semi-conductive and contains a low hardness.</p>
