--- a/Assignment-10/index.html
+++ b/Assignment-10/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Assignment10">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock info using code</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./CSS/style.css" />
 </head>
 <body>
 <div class="main-container">
