--- a/Assignment-10/index.html
+++ b/Assignment-10/index.html
@@ -10,29 +10,29 @@
 </head>
 <body>
 <div class="main-container">
-    <h1 id="mainheader">Cool Rocks</h1>  
+    <h1 id="mainheader">Cool Rocks!</h1>  
     <div class="secondary-container align">
-    </div>
-    <div class="secondary-container">
         <h2>Chert</h2> 
+    </div>
+    <div class="secondary-container"> 
         <p>Chert is a fine-grained, sedimentary rock. This is a rock made up of silicon dioxide (SiO2) through a combining of minerals. There are common in the US plains where flat layers allow for deformation by wind and erosion. </p>
-         <img id="chert" src="images/chert.jpeg" height="362px" alt="Chert" title="chert" />
+         <img id="chert" src="images/chert.jpeg" height="300px" width="600px" alt="Chert" title="chert" />
     </div> 
 
     <div class="secondary-container align">
-    </div>
-   <div class="secondary-container">
         <h2>Pyrite</h2> 
-        <p>Pyrite is a natrally occuring mineral that is commonly refered to as "fool's gold". This is technically not a rock but is commonly categorized as one as it can contain various mineral intrusions. The mineral is semi-conductive and contains a low hardness.</p>
-        <img id="pyrite" src="images/Pyrite.jpeg" width="350px" alt="Pyrite" title="Pyrite" />
-   </div>  
-
-   <div class="secondary-container align">
     </div>
     <div class="secondary-container">
-        <h2>Obsidian</h2> 
+        <p>Pyrite is a natrally occuring mineral that is commonly refered to as "fool's gold". This is technically not a rock but is commonly categorized as one as it can contain various mineral intrusions. The mineral is semi-conductive and contains a low hardness.</p>
+        <img id="pyrite" src="images/Pyrite.jpeg" height="300px" width="600px" alt="Pyrite" title="Pyrite" />
+   </div>  
+
+    <div class="secondary-container align">
+        <h2>Obsidian</h2>
+    </div>
+    <div class="secondary-container">
         <p>Obsidian is a volcanic rock (igneous) made from lava extrusion. This means the lava spilled onto the earth's surface heating up the metamorphic or sedimentary rocks in the area. This intense heat causes the layered look. This is then rapidly cooled causing the low mineral composition.</p>
-        <img id="obsidian" src="images/obsidian.jpeg" width="350px" alt="obsidian" title="obsidian" />
+        <img id="obsidian" src="images/obsidian.jpeg" height="300px" width="600px" alt="obsidian" title="obsidian" />
     </div>  
 
 </div>
