--- a/Assignment-11/index.html
+++ b/Assignment-11/index.html
@@ -12,6 +12,9 @@
 <div class="main-container">
     <h1 id="mainheader">Using Salt Dilution Standards to Understand Surface Water Movement</h1>  
 </div>
+ <div class="images" >
+
+ </div>
 <img src="images/stream_MART341.jpeg" alt="Stream">
     <div class="general-principles"> 
         <p>Nearly all surface water bodies are monitored through a technical flow tracking method. This is a simple technique where a flow tracker device is placed into the water in equal intervals. Then a computer program creates an average of this data to be used for water flow in cubic feet per second. This method works in larger streams and rivers where the tracker can be placed in multiple spots. In streams that are incredibly narrow we used dilution gauging.  </p>
