--- a/Assignment-11/index.html
+++ b/Assignment-11/index.html
@@ -14,14 +14,13 @@
 <div class="main-container">
     <h1 id="mainheader">Using Salt Dilution Standards to Understand Surface Water Movement</h1>  
 </div>
-
- <div class="image" >
-<img src="images/stream_MART341.jpeg" alt="Stream">
     <div class="general-principles"> 
-        <p>Nearly all surface water bodies are monitored through a technical <a href= "https://www.usgs.gov/media/images/hydro-tech-making-flow-tracker-measurement" target="explaination">flow tracking method</a>. This is a simple technique where a flow tracker device is placed into the water in equal intervals. Then a computer program creates an average of this data to be used for water flow in cubic feet per second. This method works in larger streams and rivers where the tracker can be placed in multiple spots. In streams that are incredibly narrow we used dilution gauging.  </p>
+        <p>Nearly all surface water bodies are monitored through a technical <a href= "https://www.usgs.gov/media/images/hydro-tech-making-flow-tracker-measurement" target="explaination">flow tracking method</a>. This is a simple technique where a flow tracker device is placed into the water in equal intervals. Then a computer program creates an average of this data to be used for water flow in cubic feet per second. This method works in larger streams and rivers where the tracker can be placed in multiple spots. In streams that are incredibly narrow we use dilution gauging.  </p>
     <div class="Measurement-methods">
         <p>This is conducted by placing a <a href= "https://www.usgs.gov/special-topics/water-science-school/science/conductivity-electrical-conductance-and-water" target="explaination">conductivity instrument</a> into the stream. This will stabilize to near zero as there is low salt in the water. Then a bucket of water (from that stream) is filled with salt of a known value. This solution is dumped into the stream upstream of the conductivity instrument. This will record a spike as the salt flows past. This can then be entered into python code to determine the slope and in turn the flow in cubic feet per second. </p>
-   </div>  
+</div>  
+    <div class="image" >
+    <img src="images/stream_MART341.jpeg" alt="Stream">
 
 </div>
 </body>
