--- a/Assignment-12/index.html
+++ b/Assignment-12/index.html
@@ -33,7 +33,7 @@
           </div>
        </div>
     </div>
-    <div class="header">
+    <div class="title">
        Guide to Coffee
     </div>
  </header>
