--- a/Assignment-12/index.html
+++ b/Assignment-12/index.html
@@ -34,7 +34,7 @@
        </div>
     </div>
     <div class="title">
-       Guide to Coffee
+       <h1>Guide to Coffee</h1>
     </div>
  </header>
 
