--- a/Assignment-12/index.html
+++ b/Assignment-12/index.html
@@ -40,24 +40,39 @@
     <div class="Cappuccino"> 
         <h2>Cappuccino</h2>
         <p> This is a drink made form espresso and milk. The milk is steamed to incorporate a large amount of foam, or bubbles. Then this is poured over the espresso shots in a slow fashion, as to no disrupt the foamy milk. There is two kinds of cappuccinos, wet and dry. The wet cappuccino has less froth and more smooth milk. The dry cappuccino has more foam. </p>
+        <div class="cap-image" >
+            <img src="images/Cappuccino.jpeg" alt="cappuccino">
+
     <div class="Latte">
         <h2>Latte</h2>
         <p> A latte is very similar in construction to a cappuccino. The latte is assembled by adding frothed milk to shots of espresso. This milk is only slightly frothed. The latte in the US is commonly made with the addition of sugary syrups. These range in flavor and mask the sometimes bitter taste of espresso.</p> 
+        <div class="latte-image" >
+            <img src="images/Latte.jpeg" alt="Latte">
+
      <div class="Breve">
         <h2>Breve</h2>
         <p> Breve is a form of latte that is made in the same fashion. The difference is a latte is made with whole milk, while a breve uses half-and-half. This makes for a richer, sweeter drink. This is common for individuals that don't love the strength of lattes and wish to add richness to the drink. </p> 
+        <div class="breve-image" >
+            <img src="images/breve.jpeg" alt="Breve">
+
     <div class="Cafe au Lait">
         <h2>Cafe au Lait</h2>
         <p>The Cafe au Lait is made with drip coffee, roast of choice, and steamed milk. The milk will only be slightly frothy and will encompass about half of the drink volume. The coffee is placed in the cup prior to the steamed milk addition. This drink has the strong coffee taste with a mellow variation. </p> 
+        <div class="cafe-image" >
+            <img src="images/cafe-au-lait.jpeg" alt="cafe">
+
     <div class="Macchiato">
         <h2>Macchiato</h2>
         <p> Macchiatos are typically made incorrectly in the US. A traditional Macchiato is made with shots of rich, smooth espresso and a spoonful of foam from steamed milk. These use a very sweet, smooth espresso as there is not much milk to cover up any bitterness. The spoonful of foam is taken off the top of a pitcher of steamed milk. </p> 
+        <div class="mach-image" >
+            <img src="images/macchiato.jpeg" alt="macchiato">
+
     <div class="Americano">
         <h2>Americano</h2>
         <p> A more simple drink is the Americano. This is simply shots of espresso over water. It closely resemebles drip coffee or a cold brew. Commonly made hot or iced dependent on customers wants. </p> 
-    
-        <div class="image" >
-            <img src="images/stream_MART341.jpeg" alt="Stream">           
+        <div class="americano-image" >
+            <img src="images/Americano.png" alt="americano">
+              
 </div>
 </body>
 </html>
