--- a/Assignment-12/index.html
+++ b/Assignment-12/index.html
@@ -55,23 +55,11 @@
         <div class="breve-image" >
             <img src="images/breve.jpeg" alt="Breve">
 
-    <div class="Cafe au Lait">
+    <div class="Cafe">
         <h2>Cafe au Lait</h2>
         <p>The Cafe au Lait is made with drip coffee, roast of choice, and steamed milk. The milk will only be slightly frothy and will encompass about half of the drink volume. The coffee is placed in the cup prior to the steamed milk addition. This drink has the strong coffee taste with a mellow variation. </p> 
         <div class="cafe-image" >
             <img src="images/cafe-au-lait.jpeg" alt="cafe">
-
-    <div class="Macchiato">
-        <h2>Macchiato</h2>
-        <p> Macchiatos are typically made incorrectly in the US. A traditional Macchiato is made with shots of rich, smooth espresso and a spoonful of foam from steamed milk. These use a very sweet, smooth espresso as there is not much milk to cover up any bitterness. The spoonful of foam is taken off the top of a pitcher of steamed milk. </p> 
-        <div class="mach-image" >
-            <img src="images/macchiato.jpeg" alt="macchiato">
-
-    <div class="Americano">
-        <h2>Americano</h2>
-        <p> A more simple drink is the Americano. This is simply shots of espresso over water. It closely resemebles drip coffee or a cold brew. Commonly made hot or iced dependent on customers wants. </p> 
-        <div class="americano-image" >
-            <img src="images/Americano.png" alt="americano">
               
 </div>
 </body>
