--- a/Assignment-12/index.html
+++ b/Assignment-12/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="./CSS/fonts.css" />
 </head>
 
+<div>
 <header class="">
     <div class="menu-item">
        <a href="#">Home</a>
@@ -35,6 +36,7 @@
        <h1>Guide to Coffee</h1>
     </div>
  </header>
+ </div>
 
  <body>
     <div class="Cappuccino"> 
