--- a/Assignment-12/index.html
+++ b/Assignment-12/index.html
@@ -47,21 +47,23 @@
         <p> This is a drink made form espresso and milk. The milk is steamed to incorporate a large amount of foam, or bubbles. Then this is poured over the espresso shots in a slow fashion, as to no disrupt the foamy milk. There is two kinds of cappuccinos, wet and dry. The wet cappuccino has less froth and more smooth milk. The dry cappuccino has more foam. </p>
         
     <div class="Latte">
-        <h2>Latte</h2>
+        <h3>Latte</h3>
         <div class="latte-image" >
             <img src="images/Latte.jpeg" alt="Latte">
         <p> A latte is very similar in construction to a cappuccino. The latte is assembled by adding frothed milk to shots of espresso. This milk is only slightly frothed. The latte in the US is commonly made with the addition of sugary syrups. These range in flavor and mask the sometimes bitter taste of espresso.</p> 
 
      <div class="Breve">
-        <h2>Breve</h2>
+        <h4>Breve</h4>
         <div class="breve-image" >
             <img src="images/breve.jpeg" alt="Breve">
         <p> Breve is a form of latte that is made in the same fashion. The difference is a latte is made with whole milk, while a breve uses half-and-half. This makes for a richer, sweeter drink. This is common for individuals that don't love the strength of lattes and wish to add richness to the drink. </p> 
 
     <div class="Cafe">
-        <h2>Cafe au Lait</h2>
+        <h5>Cafe au Lait</h5>
         <div class="cafe-image" >
-            <img src="images/cafe-au-lait.jpeg" alt="cafe">
+            <img src="images/cafe-au-lait.jpeg" alt="cafe"
+                width="200"
+                height="250">
         <p>The Cafe au Lait is made with drip coffee, roast of choice, and steamed milk. The milk will only be slightly frothy and will encompass about half of the drink volume. The coffee is placed in the cup prior to the steamed milk addition. This drink has the strong coffee taste with a mellow variation. </p> 
         
 </div>
