--- a/Assignment-12/index.html
+++ b/Assignment-12/index.html
@@ -46,7 +46,7 @@
             <img src="images/Cappuccino.jpeg" alt="cappuccino"
                 width="300"
                 height="400">
-        <p> This is a drink made form espresso and milk. The milk is steamed to incorporate a large amount of foam, or bubbles. Then this is poured over the espresso shots in a slow fashion, as to no disrupt the foamy milk. There is two kinds of cappuccinos, wet and dry. The wet cappuccino has less froth and more smooth milk. The dry cappuccino has more foam. </p>
+        <p> This is a drink made from espresso and milk. The milk is steamed to incorporate a large amount of foam, or bubbles. Then this is poured over the espresso shots in a slow fashion, as to not disrupt the foamy milk. There is two kinds of cappuccinos, wet and dry. The wet cappuccino has less froth and more smooth milk. The dry cappuccino has more foam. </p>
         
     <div class="Latte">
         <h3>Latte</h3>
