--- a/Assignment-13/index.html
+++ b/Assignment-13/index.html
@@ -43,7 +43,7 @@
                 <img alt="Athens View">
             </div>
             Greek is a language that is less popular, but essential for travel in Greece and Cyprus. The offical language of both Cyprus and Greece is Greek. Greece is located in Southern Europe, bordering Albania, North Macedonia, Bulgaira, and Turkey. It is most widely known for its emmense islands. Cyprus sits near Turkey south of the greek islands. Cyprus and Greece have many similarities in culture, lifestyle, and language. There is some dialect differences, but majority of the language remains the same. Greece and Cyprus are known for abundant beaches, rich history, and increasing tourism. As tourism increases in specific areas, english is becoming more widespread, but many smaller areas do not speak any english. This is why learning Greek will be helpful before your visit. 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6277513.970191315!2d22.67648468125!3d39.80267656360451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x135b4ac711716c63%3A0x363a1775dc9a2d1d!2sGreece!5e0!3m2!1sen!2sus!4v1701106356931!5m2!1sen!2sus" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6277513.970191315!2d22.67648468125!3d39.80267656360451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x135b4ac711716c63%3A0x363a1775dc9a2d1d!2sGreece!5e0!3m2!1sen!2sus!4v1701106356931!5m2!1sen!2sus" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
         </div>
 
         <div class="second-paragraph">
