--- a/Assignment-13/pages/introduction.html
+++ b/Assignment-13/pages/introduction.html
@@ -31,6 +31,7 @@
                 </div>
             </div>
         </div>
+    </header>
         <section>
         <h1>Introduction in Greek</h1>
         <div class="intro">
