--- a/Assignment-13/pages/phrases.html
+++ b/Assignment-13/pages/phrases.html
@@ -29,13 +29,9 @@
                 <div class="dropdown-item">
                     <a href="./pages/introduction.html" target="_new">Introduction</a>
                 </div>
-            </div>
-        </div>
-        <div class="site-name">
-
         </div>
     </header>
-    
+
     <h1>Conversation Practice</h1>
     <h3>&nbsp;</h3>
     <h5>&nbsp;</h5>
@@ -49,5 +45,6 @@
         <div class="Image6">
             <img alt="Sunset">
         </div>
+    </section>
 </body>
 </html>
