--- a/Assignment-13/pages/contact.html
+++ b/Assignment-13/pages/contact.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="">
+    <header class="styles">
         <div class="menu-item">
             <a href="#">Why Learn Greek</a>
         </div>
