--- a/Assignment-13/pages/introduction.html
+++ b/Assignment-13/pages/introduction.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="">
+    <header class="styles">
         <div class="menu-item">
             <a href="#">Why Learn Greek</a>
         </div>
@@ -32,7 +32,7 @@
             </div>
         </div>
     </header>
-    
+
         <section>
         <h1>Introduction in Greek</h1>
         <div class="intro">
