--- a/Assignment-13/pages/contact.html
+++ b/Assignment-13/pages/contact.html
@@ -11,6 +11,7 @@
 
 <body>
     <header class="styles">
+        <link rel="stylesheet" href="./CSS/style.css" type="text/css" />
         <div class="menu-item">
             <a href="#">Why Learn Greek</a>
         </div>
