--- a/Assignment-13/about.html
+++ b/Assignment-13/about.html
@@ -16,36 +16,42 @@
             <a href="#">Why Learn Greek</a>
         </div>
         <div class="menu-item">
-            <a href="./pages/about.html">About</a>
+            <a href="./about.html">About</a>
         </div>
         <div class="menu-item">
-            <a href="./pages/contact.html">Contact</a>
+            <a href="./contact.html">Contact</a>
         </div>
         <div class="menu-item dropdown">
-            <a href="./pages/phrases.html">Phrases</a>
+            <a href="./phrases.html">Phrases</a>
             <div class="dropdown-content">
                 <div class="dropdown-item">
-                    <a href="./pages/ordering.html" target="_new">ordering</a>
+                    <a href="./ordering.html" target="_new">ordering</a>
                 </div>
                 <div class="dropdown-item">
-                    <a href="./pages/introduction.html" target="_new">Introduction</a>
+                    <a href="./introduction.html" target="_new">Introduction</a>
                 </div>
+            </div>
+
         </div>
     </header>
 
-    <h1>Conversation Practice</h1>
+    <h1>About the Author</h1>
     <h3>&nbsp;</h3>
     <h5>&nbsp;</h5>
+   
+    <section>   
+        <div class="author">
+            Raegan Osentowski is a student at the University of Montana. She is studying Geoscience with a minor in International Development Studies. She is an active memeber in the Global Engagement Office. Raegan has studied abroad in Athens, Greece in the Fall of 2022 and will be in Trang Bom, Vietnam in the Spring of 2024. She learned some greek while abroad in Greece and quickly fell in love with the language. 
+        </div>
+        <div class="Image3">
+            <img alt="Delpi">
 
-    <section>
+        <div class="Image4">
+            <img alt="Raegan">
+
         </div>
-        <div class="Phrases">
-            Learning greek can be challenging and difficult, but with adequate practice you can be a master before you even arrive. The following two sections outline two different conversations that cover basic greek phrases. These are ordering at a cafe and introducing yourself to a close friend. Take note of the informal phrases used. Read through the following dialoges and try to change phrases to match your wants. 
-        <div class="Image5">
-            <img alt="ocean">
-        <div class="Image6">
-            <img alt="Sunset">
-        </div>
+    </div>
     </section>
+   
 </body>
 </html>
