--- a/Assignment-13/introduction.html
+++ b/Assignment-13/introduction.html
@@ -16,33 +16,33 @@
             <a href="#">Why Learn Greek</a>
         </div>
         <div class="menu-item">
-            <a href="./pages/about.html">About</a>
+            <a href="./about.html">About</a>
         </div>
         <div class="menu-item">
-            <a href="./pages/contact.html">Contact</a>
+            <a href="./contact.html">Contact</a>
         </div>
         <div class="menu-item dropdown">
-            <a href="./pages/phrases.html">Phrases</a>
+            <a href="./phrases.html">Phrases</a>
             <div class="dropdown-content">
                 <div class="dropdown-item">
-                    <a href="./pages/ordering.html" target="_new">ordering</a>
+                    <a href="./ordering.html" target="_new">Ordering</a>
                 </div>
                 <div class="dropdown-item">
-                    <a href="./pages/introduction.html" target="_new">Introduction</a>
+                    <a href="./introduction.html" target="_new">Introduction</a>
                 </div>
             </div>
         </div>
     </header>
-    <h1>Ordering Coffee in Greek</h1>
 
-    <div Class="Ordering">
-        <br>Γεια σας, θα ήθελα έναν καφέ χωρίς ζάχαρη</br>
-        <br>Θα είναι 5 ευρώ</br>
-        <br>Μπορώ να πάρω και το τοστ</br>
-        <br>φυσικά. θα είναι 11 ευρώ</br>
-        <br>Εδώ είναι 20 ευρώ</br>
-        <br>Εδώ είναι τα ρέστα, ο καφές και το τοστ</br>
-        <br>Ευχαριστώ πολύ</br> 
-    </div>
+        <section>
+        <h1>Introduction in Greek</h1>
+        <div class="intro">
+            Γεια σας! Με λένε Ρειγκαν Οσντόφσκι. Είμαι από την Αμερική. Είσαι από την Μοντανα. Εγώ μένω στην Μισσολα. Δεν ΔΟΥ λάβω. Εγώ φοιτήτρια. Σπουζαξω Νομικά. Μιλάω καλά αγγλικά και λίγο ελληνικά. 
+        </div>
+    </section>
 </body>
 </html>
+
+    
+
+            
