--- a/Assignment-13/index.html
+++ b/Assignment-13/index.html
@@ -16,19 +16,19 @@
             <a href="#">Why Learn Greek</a>
         </div>
         <div class="menu-item">
-            <a href="./pages/about.html">About</a>
+            <a href="./about.html">About</a>
         </div>
         <div class="menu-item">
-            <a href="./pages/contact.html">Contact</a>
+            <a href="./contact.html">Contact</a>
         </div>
         <div class="menu-item dropdown">
-            <a href="./pages/phrases.html">Phrases</a>
+            <a href="./phrases.html">Phrases</a>
             <div class="dropdown-content">
                 <div class="dropdown-item">
-                    <a href="./pages/ordering.html" target="_new">ordering</a>
+                    <a href="./ordering.html" target="_new">ordering</a>
                 </div>
                 <div class="dropdown-item">
-                    <a href="./pages/introduction.html" target="_new">Introduction</a>
+                    <a href="./introduction.html" target="_new">Introduction</a>
                 </div>
             </div>
 
