--- a/Assignment-13/introduction.html
+++ b/Assignment-13/introduction.html
@@ -37,7 +37,8 @@
         <section>
         <h1>Introduction in Greek</h1>
         <div class="intro">
-            Γεια σας! Με λένε Ρειγκαν Οσντόφσκι. Είμαι από την Αμερική. Είσαι από την Μοντανα. Εγώ μένω στην Μισσολα. Δεν ΔΟΥ λάβω. Εγώ φοιτήτρια. Σπουζαξω Νομικά. Μιλάω καλά αγγλικά και λίγο ελληνικά. 
+            This is a simple introduction in greek 
+            <br>Γεια σας! Με λένε Ρειγκαν Οσντόφσκι. Είμαι από την Αμερική. Είσαι από την Μοντανα. Εγώ μένω στην Μισσολα. Δεν ΔΟΥ λάβω. Εγώ φοιτήτρια. Σπουζαξω Νομικά. Μιλάω καλά αγγλικά και λίγο ελληνικά.</br>
         </div>
     </section>
 </body>
