--- a/Assignment-13/ordering.html
+++ b/Assignment-13/ordering.html
@@ -36,6 +36,7 @@
     <h1>Ordering Coffee in Greek</h1>
 
     <div Class="Ordering">
+        <br>This is a simple order in a cafe.</br>
         <br>Γεια σας, θα ήθελα έναν καφέ χωρίς ζάχαρη</br>
         <br>Θα είναι 5 ευρώ</br>
         <br>Μπορώ να πάρω και το τοστ</br>
