--- a/Assignment-14/pages/br.html
+++ b/Assignment-14/pages/br.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="device-width, initial-scale=1.0">
 
     <link rel="stylesheet" text="text/css" href="../CSS/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+
 </head>
 
 <body>
@@ -29,10 +31,15 @@
   </nav>
   <div class="br">
 
-    <img src="../images/Breaststroke.jpeg" height="600" width="500">
+    <canvas height="600" width="500"></canvas>
+    <img src="../images/Breaststroke.jpeg">
     
     </div>
-    <div class="swim">  
+    <div class="is-size-1 is-bold has-text-centered">
+        <h1>Breaststroke</h1>
+    </div>
+
+    <div class="is-size-4">  
       Breaststroke is often called frog stroke as you legs turn out like a frog when you kick. The arms move in a similar motion at the same time. There are many drills to master the timing of this stroke. 2 kick 1 pull is good to time the kicks with the breathing. Additionally, I Y drill helps for kids to understand the general arm motions. 
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EElzlIMjk_c?si=xxDvxvrVTLoYnVUd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
