--- a/Assignment-14/pages/fly.html
+++ b/Assignment-14/pages/fly.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="device-width, initial-scale=1.0">
 
     <link rel="stylesheet" text="text/css" href="../CSS/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+
 </head>
 
 <body>
@@ -29,10 +31,14 @@
   </nav>
   <div class="fly">
 
-    <img src="../images/butterfly.jpeg" height="600" width="500">
+    <cavas height="600" width="500"></cavas>
+    <img src="../images/butterfly.jpeg">
     
     </div>
-    <div class="swim">  
+<div class="is-size-1 is-bold has-text-centered">
+    <h1>Butterfly</h1>
+</div>
+    <div class="is-size-4">  
         Butterfly is the most difficult stroke for younger kids to learn. This stroke requires the movement of both arms in a circle at the same time across the water. The legs flow in a mermaid like motion starting at the core all the way down to the toes. This stroke takes time for children to learn so taking time to explain and walk through steps is essential. Drills are helpful to slow down the stroke as the motion an be rapid. 
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/riIyImmuB_M?si=r5ocdWHJCgv6Frpx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
