--- a/Assignment-14/pages/back.html
+++ b/Assignment-14/pages/back.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="device-width, initial-scale=1.0">
 
     <link rel="stylesheet" text="text/css" href="../CSS/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+
 </head>
 
 <body>
@@ -29,10 +31,15 @@
   </nav>
   <div class="back">
     
+    <canvas height="600" width="500"></canvas>
     <img src="../images/backstroke.jpeg" height="600" width="500">
     
     </div>
-    <div class="swim">  
+    <div class="is-size-1 is-bold has-text-centered">
+        <h1>Backstroke</h1>
+    </div>
+
+    <div class="is-size-4">  
      Backstroke is most younger swimmers favorite stroke as there face does not need to be in the water. Backstroke requires a similar arm motion as freestyle as well as a flutter kick. The stroke is simple for younger kids to understand. The most difficult part of the stroke is keeping your arms in a streamlined position near your head. Additionally, the flipturns and not hitting your head on the wall is incredibily difficult. 
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/MrFt6JHii8w?si=n9inxBwCmv2jvNH9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
