--- a/Assignment-14/pages/free.html
+++ b/Assignment-14/pages/free.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="device-width, initial-scale=1.0">
 
     <link rel="stylesheet" text="text/css" href="../CSS/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+
 </head>
 
 <body>
@@ -27,16 +29,17 @@
       </div>
     </div>
   </nav>
-  <div class="free">
-
-    <img src="../images/freestyle.jpeg" height="600" width="500">
-    
-    </div>
-    <div class="swim">  
+<div class="free">
+    <canvas  height="600" width="500" ></canvas>
+    <img src="../images/freestyle.jpeg">    
+</div>
+<div class="is-size-1 is-bold has-text-centered">
+    <h1>Freestyle</h1>
+</div>    
+    <div class="is-size-4">  
      Freestyle is the most simple stroke. The stroke encompasses a single arm movement over the head. The stroke envolves a scissor style kick that comes from power of the core and hips. The arms use the back muscles primarly to generate a powerfull pull. Drills are commonly used for kids to learn the strokes fundamentals. Drills can range from learning the pull in the water or the arm recovery. 
-    </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/AQy_c30lNjI?si=z8-caGe7kQR3Ke0c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  </div>
+    </div>
 
 </body>
 </html>
