--- a/Assignment-14/drawing.html
+++ b/Assignment-14/drawing.html
@@ -35,21 +35,18 @@
           <a href="free.html">Freestyle</a>
         </div>
         <div class="menu-item">
-          <a href="drawing.html">Drawing Page</a>
-        </div>
-
+            <a href="drawing.html">Drawing Page</a>
+          </div>
+          
       </div>
     </div>
   </nav>
 </header>
 
-  <div class="is-size-1 is-bold has-text-centered pt-0">
-    <h1>Swimming General Information</h1> 
-  </div> 
-
+<title>Drawing Page</title>
   <section class="container">
       <div id="toolbar">
-        <h1>draw</h1>
+        <h2>draw</h2>
         <label for="stroke">Stroke</label>
         <input id="stroke" name='stroke' type="color">
         <label for="lineWidth">Line Width</label>
@@ -62,24 +59,5 @@
   </section>
   <script src=".index.js"></script>
 
-    <div class= "is-size-4 pt-0">   
-        <p>Swimming is a life long skill that majority of kids learn. Besides the main stroke, some refer to it as front crawl, kids in lessons learn basic life skills. Once they move up to the swim team coaches work with kids to teach all four strokes. The strokes are butterfly, backstroke, breaststroke, and freestyle. Along with strokes we learn a variety of skills that are listed below.</p>
-        <li>Flip turns</li>
-        <li>Dives</li>
-        <li>Underwater kicks</li>
-        <li>Enhanced Technique</li>
-        <li>Teamwork</li>
-        <li>Positive Attitude</li>
-        <li>Fun!</li>
-    </div>
-
-        <canvas id="swim" height="400" width="300"></canvas>
-      <script src="images/swim.jpeg"></script>
-
-    <div class="is-size-4 pt-0">
-        <p>Sign up for swimming here: <a href="https://www.gomotionapp.com/team/mtmac/page/home">MAC Site</a></p>
-    </div>
-  </div>
-    
 </body>
 </html>
